--- a/app/games/puissance4/puissance4.html
+++ b/app/games/puissance4/puissance4.html
@@ -21,6 +21,6 @@
         <input type="button" value="7" onclick="send(6)"/>
     </div>
     <label id="winner">Who is the winner ?</label>
-    <input type="button" value="test" onclick="test()">
+    <input type="button" value="Menu" onclick="menu()">
 </body>
 </html>
