--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,8 @@
 
     <div id="matchPanel">
         <input type="button" value="Puissance 4" onclick="game(0)">
-    </div>
-    <div id="waitingPanel">
-        <label>Puissance 4</label>
-        <label>Waiting for a player</label>
-        <input type="button" value="Delete Game" onclick="">
+        <input type="button" value="Snake" onclick="game(1)">
+        <input type="button" value="Blasters" onclick="game(2)">
     </div>
     <footer></footer>
 </body>
