--- a/app/lobby/lobby.html
+++ b/app/lobby/lobby.html
@@ -19,7 +19,7 @@
         <input type="button" value="Play" onclick="game('random')"/>
         <input type="button" value="Create game" onclick="game('create')"/>
         <input type="button" value="Join game" onclick="game('join')">
-        <input type="text" name="gameID" id="roomID" placeholder="Room ID">
+        <input type="text" id="gameID" placeholder="Game ID">
     </div>
 </body>
 </html>
